--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,95 @@ name: CI
 
 on:
   push:
+    branches:
+      - "main"
   pull_request:
+  workflow_dispatch:
 
 jobs:
-  xcode13:
-    name: "Big Sur (Xcode 13.2.1)"
-    runs-on: macos-11
+  xcode14_1:
+    name: "Big Sur (Xcode 14.1) (Swift 5.7.1)"
+    runs-on: macos-12
+
+    env:
+      SCHEME: Stub
+    strategy:
+      matrix:
+        env:
+          - sdk: iphonesimulator
+            destination: platform=iOS Simulator,name=iPhone 14 Pro,OS=latest
+
+          - sdk: macosx
+            destination: arch=x86_64
+
+          - sdk: appletvsimulator
+            destination: platform=tvOS Simulator,name=Apple TV,OS=latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Select Xcode 14.1
+        run: sudo xcode-select -s /Applications/Xcode_14.1.app
+
+      - name: List SDKs and Devices
+        run: xcodebuild -showsdks;
+
+      - name: Build and Test
+        run: |
+          set -o pipefail && xcodebuild clean build test \
+            -scheme "$SCHEME" \
+            -sdk "$SDK" \
+            -destination "$DESTINATION" \
+            -configuration Debug \
+            -enableCodeCoverage YES \
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | xcpretty -c;
+        env:
+          SDK: ${{ matrix.env.sdk }}
+          DESTINATION: ${{ matrix.env.destination }}
+
+  xcode13_4_1:
+    name: "Big Sur (Xcode 13.4.1) (Swift 5.6.1)"
+    runs-on: macos-12
+
+    env:
+      SCHEME: Stub
+    strategy:
+      matrix:
+        env:
+          - sdk: iphonesimulator
+            destination: platform=iOS Simulator,name=iPhone 13 Pro,OS=latest
+
+          - sdk: macosx
+            destination: arch=x86_64
+
+          - sdk: appletvsimulator
+            destination: platform=tvOS Simulator,name=Apple TV,OS=latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Select Xcode 13.4.1
+        run: sudo xcode-select -s /Applications/Xcode_13.4.1.app
+
+      - name: List SDKs and Devices
+        run: xcodebuild -showsdks;
+
+      - name: Build and Test
+        run: |
+          set -o pipefail && xcodebuild clean build test \
+            -scheme "$SCHEME" \
+            -sdk "$SDK" \
+            -destination "$DESTINATION" \
+            -configuration Debug \
+            -enableCodeCoverage YES \
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | xcpretty -c;
+        env:
+          SDK: ${{ matrix.env.sdk }}
+          DESTINATION: ${{ matrix.env.destination }}
+
+  xcode13_2_1:
+    name: "Big Sur (Xcode 13.2.1) (Swift 5.5.2)"
+    runs-on: macos-12
 
     env:
       SCHEME: Stub
